--- a/app/src/main/res/layout/content_coffee_bag_detail.xml
+++ b/app/src/main/res/layout/content_coffee_bag_detail.xml
@@ -51,6 +51,18 @@
             tools:text="light"
             android:id="@+id/coffee_detail_roast"/>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="#e9e9e9"
+        android:layout_marginTop="8dp"
+        />
+    <com.android.brewnotes.widgets.RecommendationContainer
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recommendation_container"
+        android:orientation="vertical"/>
+
 
 
 </LinearLayout>
