--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,4 +23,12 @@
 
     <include layout="@layout/content_dashboard" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="32dp"
+        android:id="@+id/fab"
+        android:src="@drawable/ic_add_black_24dp"/>
+
 </android.support.design.widget.CoordinatorLayout>
