--- a/app/src/main/res/layout/content_coffee_bag_detail.xml
+++ b/app/src/main/res/layout/content_coffee_bag_detail.xml
@@ -62,6 +62,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/recommendation_container"
         android:orientation="vertical"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:text="Add Recommendation"
+        style="@style/AppTheme.ButtonPrimary"
+        android:layout_marginTop="8dp"
+        android:id="@+id/add_rec_button"
+        />
 
 
 
