--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.ButtonPrimary">
+        <item name="android:background">#ffffb2</item>
+        <item name="android:textColor">#000080</item>
+    </style>
+
 </resources>
