Restructuring checkin/rec logic. Adding un/selected state for traits.

--- a/app/src/main/res/layout/content_selection_widget.xml
+++ b/app/src/main/res/layout/content_selection_widget.xml
@@ -12,12 +12,14 @@
         tools:text="Selection"
         android:textSize="20sp"
         android:layout_marginBottom="8dp"
+        android:id="@+id/selection_container_title"
 
         />
     <View
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:background="#000080"/>
+        android:background="#000080"
+        android:layout_marginBottom="8dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
