--- a/app/src/main/res/layout/activity_recommendation_summary.xml
+++ b/app/src/main/res/layout/activity_recommendation_summary.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.android.brewnotes.recommendation.RecommendationSummaryActivity">
+    tools:context="com.android.brewnotes.checkins.CheckInSummaryActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
