--- a/app/src/main/res/layout/content_add_recommendation.xml
+++ b/app/src/main/res/layout/content_add_recommendation.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.android.brewnotes.recommendation.AddRecommendationActivity">
+    tools:context="com.android.brewnotes.checkins.AddCheckInActivity">
 
 
     <com.android.brewnotes.widgets.MultiSelectionCard
@@ -19,6 +19,7 @@
         app:selectionType="Aroma"
         tools:layout_height="100dp"
         android:layout_marginBottom="16dp"
+        android:id="@+id/aroma_card"
         />
     <com.android.brewnotes.widgets.MultiSelectionCard
         android:layout_width="match_parent"
@@ -26,6 +27,7 @@
         app:selectionType="Body"
         tools:layout_height="100dp"
         android:layout_marginBottom="16dp"
+        android:id="@+id/body_card"
         />
     <com.android.brewnotes.widgets.MultiSelectionCard
         android:layout_width="match_parent"
@@ -33,6 +35,7 @@
         app:selectionType="Flavor"
         tools:layout_height="100dp"
         android:layout_marginBottom="16dp"
+        android:id="@+id/flavor_card"
         />
     <com.android.brewnotes.widgets.MultiSelectionCard
         android:layout_width="match_parent"
@@ -40,6 +43,17 @@
         app:selectionType="Finish"
         tools:layout_height="100dp"
         android:layout_marginBottom="16dp"
+        android:id="@+id/finish_card"
         />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:text="Check-In"
+        style="@style/AppTheme.ButtonPrimary"
+        android:layout_marginTop="8dp"
+        android:id="@+id/add_checkin_button"
+        />
+
 
 </LinearLayout>
