--- a/app/src/main/res/layout/content_coffee_bag_detail.xml
+++ b/app/src/main/res/layout/content_coffee_bag_detail.xml
@@ -57,7 +57,7 @@
         android:background="#e9e9e9"
         android:layout_marginTop="8dp"
         />
-    <com.android.brewnotes.widgets.RecommendationContainer
+    <com.android.brewnotes.widgets.CheckInContainer
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recommendation_container"
