--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -5,7 +5,6 @@
     android:id="@+id/content_dashboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -13,6 +12,7 @@
     tools:context="com.android.brewnotes.dashboard.DashboardActivity"
     tools:showIn="@layout/activity_profile"
     android:orientation="vertical"
+    android:background="#c9c9c9"
     >
 
 
@@ -24,7 +24,8 @@
         android:elevation="4dp"
         android:padding="8dp"
         android:layout_weight="1"
-        android:id="@+id/user_card"/>
+        android:id="@+id/user_card"
+        android:layout_marginBottom="4dp"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
