Adding in more styling to views. Switching over CoffeeManager to kotlin implementation.

--- a/app/src/main/res/drawable/missing_photo_drawable.xml
+++ b/app/src/main/res/drawable/missing_photo_drawable.xml
@@ -4,7 +4,7 @@
     <item>
 
         <shape android:shape="oval">
-            <solid android:color="@color/colorAccent"/>
+            <solid android:color="@color/faded_orange"/>
             <size android:height="10dp" android:width="10dp"/>
         </shape>
 
