--- a/app/src/main/res/layout/activity_check_in_detail.xml
+++ b/app/src/main/res/layout/activity_check_in_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.android.brewnotes.dashboard.DashboardActivity">
+    tools:context="com.android.brewnotes.checkins.CheckInDetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,16 +21,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_dashboard" />
+    <include layout="@layout/content_check_in_detail" />
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="32dp"
         android:id="@+id/fab"
-        android:src="@drawable/ic_coffee_cup"
-        android:tint="#fff"
-        app:backgroundTint="@color/dark_brown"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
